@@ -105,7 +105,7 @@
 #error "eek! DBVER can't handle minor versions > 9"
 #endif
 
-#define PY_BSDDB_VERSION "4.7.1devel4"
+#define PY_BSDDB_VERSION "4.7.1devel5"
 
 /* Python object definitions */
 
@@ -134,6 +134,7 @@ typedef struct {
     PyObject*       event_notifyCallback;
     struct DBObject *children_dbs;
     struct DBTxnObject *children_txns;
+    PyObject        *private;
     PyObject        *in_weakreflist; /* List of weak references */
 } DBEnvObject;
 
@@ -157,6 +158,7 @@ typedef struct DBObject {
     PyObject*       associateCallback;
     PyObject*       btCompareCallback;
     int             primaryDBType;
+    PyObject        *private;
     PyObject        *in_weakreflist; /* List of weak references */
 } DBObject;
 
